Fixed aligns for statistic

--- a/src/partials/views/_statistic.sass
+++ b/src/partials/views/_statistic.sass
@@ -112,28 +112,39 @@
 //       Aligns
 //-------------------//
 
-.ts.statistics .statistic > .label[class*="left aligned"],
-.ts.statistic > .label[class*="left aligned"],
-.ts.statistics .statistic > .text[class*="left aligned"],
-.ts.statistic > .text[class*="left aligned"]
-    text-align: left
-.ts.statistics .statistic > .label[class*="right aligned"],
-.ts.statistic > .label[class*="right aligned"],
-.ts.statistics .statistic > .text[class*="right aligned"],
-.ts.statistic > .text[class*="right aligned"]
-    text-align: right
-.ts.statistics .statistic > .label[class*="center aligned"],
-.ts.statistic > .label[class*="center aligned"],
-.ts.statistics .statistic > .text[class*="center aligned"],
-.ts.statistic > .text[class*="center aligned"]
-    text-align: center
+.ts.statistics[class*="left aligned"] .statistic >,
+.ts.statistic[class*="left aligned"] >
+    .value.value,
+    .label.label.label
+        text-align: left
 
+.ts.statistics[class*="right aligned"] .statistic >,
+.ts.statistic[class*="right aligned"] >
+    .value.value,
+    .label.label.label
+        text-align: right
+
+.ts.statistics[class*="center aligned"] .statistic >,
+.ts.statistic[class*="center aligned"] >
+    .value.value,
+    .label.label.label
+        text-align: center
+
+// Vertical
+.ts.statistics[class*="left aligned"] .statistic > .value,
+.ts.statistic[class*="left aligned"] > .value,
 .ts.statistics .statistic > .label[class*="top aligned"],
 .ts.statistic > .label[class*="top aligned"]
     align-self: flex-start
+
+.ts.statistics[class*="center aligned"] .statistic > .value,
+.ts.statistic[class*="center aligned"] > .value,
 .ts.statistics .statistic > .label[class*="middle aligned"],
 .ts.statistic > .label[class*="middle aligned"]
     align-self: center
+
+.ts.statistics[class*="right aligned"] .statistic > .value,
+.ts.statistic[class*="right aligned"] > .value,
 .ts.statistics .statistic > .label[class*="bottom aligned"],
 .ts.statistic > .label[class*="bottom aligned"]
     align-self: flex-end
